[package]
name = "lib_demo"
version = "0.1.4"
edition = "2021"
"description" = "A demo library"
"license" = "MIT OR Apache-2.0"
"readme" = "README.md"
"repository" = "https://github.com/katayama8000/crates-publish-minimal"
"keywords" = ["demo", "library"]
"categories" = ["library"]
"authors" = ["katayama8000 <https://github.com/katayama8000>"]
"homepage" = "https://my-site-ten-mu.vercel.app/"
"documentation" = "https://my-site-ten-mu.vercel.app/"
"exclude" = ["tests/*", "benches/*", "examples/*", "docs/*"]
"publish-token" = "test"
"publish-branch" = "master"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["first"]
first = []
second = []
third = []

