[package]
name = "crates-publish-minimal"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "A minimal Rust project for publishing to crates.io"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katayama8000/crates-publish-minimal"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
